More dark mode fixes

--- a/_sass/modules/_footer.scss
+++ b/_sass/modules/_footer.scss
@@ -23,14 +23,17 @@
   justify-content: center;
 
   button {
-    font-size: 1em;
+    border: 1px solid;
+    font-size: 0.8em;
     padding: 10px;
     background: transparent;
     @include borderColor();
+    margin: 0;
+    cursor: pointer;
   }
 
   .light-button {
-    background: white; 
+    background: rgba($color-white, 0.75);
     border-radius: 10px 0 0 10px;
     border-right: none;
   }
